# End-to-End-Data-Pipeline-for-Job-Market-Analysis

./: .gitignore  .user.yml  README.md  docker-compose.yaml  dockerfile  main.py  note.txt  pyproject.toml  requirements.txt  try.py
airflow/config/: airflow.cfg
airflow/dags/: schedule.py
analyse/: load_data.py
database/: data_arrival.py  databricks_upload.py  db_connection.py  init.sql  upload.py
databricks/: convert_to_table.ipynb  json_to_table.ipynb
dbt_job_market/: .user.yml  dbt_project.yml
dbt_job_market/analyses/: explore.sql
dbt_job_market/macros/: convert_time_posted.sql  get_applicant_level.sql  get_num_applicants.sql  parse_location.sql  split_industries.sql
dbt_job_market/models/bronze/: bronze_linkedin_data.sql
dbt_job_market/models/gold/: bridge_job_function.sql  bridge_job_industry.sql  dim_companies.sql  dim_functions.sql  dim_industries.sql  dim_job.sql  dim_job_functions.sql  dim_jobs.sql  dim_locations.sql  dim_posted_date.sql  fact_job_postings.sql  gold_obt.sql
dbt_job_market/models/silver/: silver_job_functions.sql  silver_job_industries.sql  silver_job_latest.sql  silver_linkedin_data.sql
dbt_job_market/models/source/: sources.yml
dbt_job_market/snapshots/: snap_job_applicants.yml
dbt_job_market/tests/: test_relaionship.yml
ingest/: check.ipynb  linkedin-scrape.py  scrape.ipynb
raw/linkedin/: 2026-03-21T030516.json  2026-03-21T033358.json  2026-03-21T033750.json
scraper/: add_col.ipynb  check.ipynb  linkedin_scrape.py  scrape.ipynb
